# HTodo

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PomodoroDialWidget.cpp  PomodoroDialWidget.h  PomodoroFocusCard.cpp  PomodoroTimer.h  TagAnalysisChartWidget.cpp  TagSelectorWidget.cpp  TagSelectorWidget.h  TaskStorage.cpp  TaskStorage.h  main.cpp  resources.qrc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CMakeLists.txt  PomodoroTimer.cpp  TaskStorage.cpp  TaskStorage.h
src/resources/: CMakeLists.txt  resources.qrc
src/widgets/: CMakeLists.txt  PomodoroFocusCard.h  RoundedComboBox.cpp  RoundedComboBox.h  TagAnalysisChartWidget.h  TagSelectorWidget.cpp  TagSelectorWidget.h
